feat: create homepage

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,22 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "indent": [
-      "error",
-      4
-    ],
-    "linebreak-style": [
-      "error",
-      "windows"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "never"
-    ]
-  }
+    "extends": "next/core-web-vitals",
+    "rules": {
+        "react/no-unescaped-entities": 0,
+        "indent": [
+            "error",
+            4
+        ],
+        "linebreak-style": [
+            "error",
+            "windows"
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "never"
+        ]
+    }
 }
