--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "whoisheshiki-shop",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@stitches/react": "^1.2.8",
-    "keen-slider": "^6.8.6",
-    "next": "13.4.13",
-    "phosphor-react": "^1.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "stripe": "^12.18.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.4.10",
-    "@types/react": "^18.2.20",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.13",
-    "typescript": "^5.1.6"
-  }
+    "name": "whoisheshiki-shop",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@stitches/react": "^1.2.8",
+        "keen-slider": "^6.8.6",
+        "next": "13.4.13",
+        "phosphor-react": "^1.4.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "sharp": "^0.32.5",
+        "stripe": "^12.18.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20.4.10",
+        "@types/react": "^18.2.20",
+        "eslint": "8.47.0",
+        "eslint-config-next": "13.4.13",
+        "typescript": "^5.1.6"
+    }
 }
