--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@stitches/react": "^1.2.8",
+        "axios": "^1.4.0",
         "keen-slider": "^6.8.6",
         "next": "13.4.13",
         "phosphor-react": "^1.4.1",
